feat: 推荐服务重写为AI驱动，新增refresh端点，删除feedback端点